syntax = "proto3";

message EmptyResponse {}
message EmptyRequest {}

enum STATUS {
    EXIST = 0;
    OK = 1;
    NOTFOUND = 2;
}

message PlaylistRequest {
    optional string playlistId = 1;
    optional string userId =2;
    string playlistName = 3;
}

message Playlist {
    string playlistId = 1;
    string userId = 2;
    string playlistName = 3;
    string createdAt = 4;
    string updatedAt = 5;
}

message PlaylistResponse {
    bool error = 1;
    STATUS status = 2;
    string message = 3;
    optional Playlist data = 4;
}

message PlaylistResponses {
    bool error = 1;
    STATUS status = 2;
    string message = 3;
    repeated Playlist data = 4;
}


service PlaylistService {
    rpc RetrievePlaylist (EmptyRequest) returns (PlaylistResponses) {}
    rpc CreatePlaylist (PlaylistRequest) returns (PlaylistResponse) {}
    rpc UpdatePlaylist (PlaylistRequest) returns (PlaylistResponse) {}
    rpc DeletePlaylist (PlaylistRequest) returns (PlaylistResponse) {}
}

//--- Playlist Podcast Section

service PlaylistPodcastService {
    rpc RetrievePodcastsFromPlaylist (PlaylistPodcastRequest) returns (PlaylistPodcastResponses) {}
    rpc AddPodcastToPlaylist (PlaylistPodcastRequest) returns (PlaylistPodcastResponse) {}
    rpc RemovePodcastFromPlaylist (PlaylistPodcastRequest) returns (PlaylistPodcastResponse) {}
}

message PlaylistPodcastRequest {
    optional string userId = 1;
    optional string podcastId = 2;
    optional string playlistId =3;
}

message PlaylistPodcast {
     string userId =1 ;
     string playlistId = 2;
     string podcastId = 3;
     string createdAt = 4;
     string updatedAt = 5;
}

message PlaylistPodcastResponse {
    bool error = 1;
    string message = 2;
    STATUS status = 3;
    optional PlaylistPodcast data =4;
}

message PlaylistPodcastResponses {
    bool error = 1;
    string message = 2;
    STATUS status = 3;
    repeated PlaylistPodcast data = 4;
}